[Re]implemented the prototype 3D planet editor in editor.html

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,6 +5,7 @@
     },
     "exclude": [
         "node_modules",
+        "static/js/OrbitControls.js",  // Otherwise THREE.* autocompletion fails!
     ],
     "typeAcquisition": {
         "enable": true,
