--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ autopep8==1.4.3
 bcrypt==3.1.6
 cffi==1.12.1
 Django==1.11.17
+django-cleanup==3.2.0
 django-cors-headers==2.4.0
 django-crispy-forms==1.7.2
 isort==4.3.4
